added basic pipeline in Jenkinsfile 3

--- a/exchange-cli/Jenkinsfile
+++ b/exchange-cli/Jenkinsfile
@@ -24,6 +24,14 @@ pipeline {
 				}
 			}
 		}
+		
+		stage ('Functional Tests') {
+			steps {
+				dir ('exchange-cli') {
+					sh "npm run test:functional"
+				}
+			}
+		}
 
 	}
 }
