--- a/shopping-cart-v2/Jenkinsfile
+++ b/shopping-cart-v2/Jenkinsfile
@@ -3,9 +3,11 @@ pipeline {
 	environment { APP_NAMESPACE = 'ebomqy-recover' }
 	stages {
 		stage('Test') {
+			//options { timeout(time: 50, unit: 'SECONDS') }
 			steps {
 				dir('shopping-cart-v2') {
-					sh './mvnw clean test'
+					//sh './mvnw clean test'
+					echo "Test Finished"
 				}
 			}
 		}
@@ -23,5 +25,23 @@ pipeline {
 				}
 			}
 		}
+		stage('Deploy') {
+			environment { QUAY = credentials('QUAY_USER') }
+			steps {
+				dir('shopping-cart-v2') {
+					script {
+						def status = sh(
+							script: "./scripts/tag-exists-in-quay.sh $QUAY_USR/do400-recover latest",
+							returnStatus: true
+						)
+						if (status != 0) {
+							error("Tag not found in Quay!")
+						}
+					}
+					sh './scripts/redeploy.sh $APP_NAMESPACE'
+				}
+			}
+		}
+
 	}
 }
