--- a/shopping-cart-v2/Jenkinsfile
+++ b/shopping-cart-v2/Jenkinsfile
@@ -6,8 +6,7 @@ pipeline {
 			//options { timeout(time: 50, unit: 'SECONDS') }
 			steps {
 				dir('shopping-cart-v2') {
-					//sh './mvnw clean test'
-					echo "Test Finished"
+					sh './mvnw clean test'
 				}
 			}
 		}
@@ -31,7 +30,7 @@ pipeline {
 				dir('shopping-cart-v2') {
 					script {
 						def status = sh(
-							script: "./scripts/tag-exists-in-quay.sh $QUAY_USER/do400-recover latest",
+							script: "./scripts/tag-exists-in-quay.sh $QUAY_USR/do400-recover latest",
 							returnStatus: true
 						)
 						if (status != 0) {
