--- a/shopping-cart-v2/Jenkinsfile
+++ b/shopping-cart-v2/Jenkinsfile
@@ -30,7 +30,7 @@ pipeline {
 				dir('shopping-cart-v2') {
 					script {
 						def status = sh(
-							script: "./scripts/tag-exists-in-quay.sh suksan_toja/do400-recover latest",
+							script: "./scripts/tag-exists-in-quay.sh $QUAY_USR/do400-recover latest",
 							returnStatus: true
 						)
 						if (status != 0) {
